# RealWorldHaskell

./: .gitignore  RealWorldHaskell.tex  readme.txt
code/: s.lkshs  s.lkshw
code/VL/: monaden.lhs
code/VL/day1/: webserver.hs
code/VL/day3/: Entweder.hs  cat.hs  gloss.hs
code/cnwgol/: cnwgol.cabal
code/cnwgol/src/: Gui.hs  Main.hs
code/u1/: u1.cabal
code/u1/src/: Calc.hs  Calculator.hs  Main.hs  Tokenize.hs
code/u2/: u2.cabal
code/u2/src/: Either.hs  Eval.hs  Main.hs
code/u3/: u3.cabal
code/u3/src/: Echo.hs  Main.hs  u3.lhs
code/u4/: u4.cabal
code/u4/src/: Main.hs  QuickSort.hs
code/u5/: u5.cabal
code/u5/src/: KVServer.hs  Main.hs  Store.hs
gfx/: GHC_uh.dia  ghc-schedule.dia  monad_stack.dia  state_trans1.dia
