name: cnwgol
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: Conways Game of Life
description: using gloss.
data-dir: ""

executable cnwgol
    build-depends: QuickCheck -any, base -any, gloss
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Gui
