name: u3
version: 0.0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
synopsis: network stuff
data-dir: ""

executable u3
    build-depends: QuickCheck -any, base -any, network
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Echo

test-suite test-u3
    build-depends: QuickCheck -any, base -any
    type: exitcode-stdio-1.0
    main-is: Main.hs
    buildable: True
    cpp-options: -DMAIN_FUNCTION=testMain
    hs-source-dirs: src
